unpackaged/main/default/objects/Courier_Data2__c/Courier_Data2__c.object-meta.xml
<CustomObject>
    <label>Courier Data2</label>
    <nameField>
        <displayFormat>CD-{0000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Courier Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>