unpackaged/main/default/objects/Courier_Data2__c/fields/Collection_Date__c.field-meta.xml
<CustomField>
    <fullName>Collection_Date__c</fullName>
    <label>Collection_Date</label>
    <type>Date</type>
</CustomField>