unpackaged/main/default/objects/Courier_Data2__c/fields/Collection_Time_2__c.field-meta.xml
<CustomField>
    <fullName>Collection_Time_2__c</fullName>
    <label>Collection Time</label>
    <type>Time</type>
</CustomField>