unpackaged/main/default/objects/Courier_Data2__c/fields/Cost_pre_gallon_in_county_US_Dollar__c.field-meta.xml
<CustomField>
    <fullName>Cost_pre_gallon_in_county_US_Dollar__c</fullName>
    <label>Cost pre gallon in county (US Dollar)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>