unpackaged/main/default/objects/Courier_Data2__c/fields/Count_3__c.field-meta.xml
<CustomField>
    <fullName>Count_3__c</fullName>
    <label>Count: 3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>