unpackaged/main/default/objects/Courier_Data2__c/fields/Courier_Pickup_site__c.field-meta.xml
<CustomField>
    <fullName>Courier_Pickup_site__c</fullName>
    <label>Courier Pickup site</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Facilities</valueSetName>
    </valueSet>
</CustomField>