unpackaged/main/default/objects/Courier_Data2__c/fields/Delivery_Date_4__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Date_4__c</fullName>
    <label>Delivery Date</label>
    <type>Date</type>
</CustomField>