unpackaged/main/default/objects/Courier_Data2__c/fields/Delivery_Time_3__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Time_3__c</fullName>
    <label>Delivery Time</label>
    <type>Time</type>
</CustomField>