unpackaged/main/default/objects/Courier_Data2__c/fields/Distance_Covered__c.field-meta.xml
<CustomField>
    <fullName>Distance_Covered__c</fullName>
    <formula>End_Kilometer__c  -  Start_Kilometer__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distance Covered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>