unpackaged/main/default/objects/Courier_Data2__c/fields/Lab_Name_3__c.field-meta.xml
<CustomField>
    <fullName>Lab_Name_3__c</fullName>
    <label>Lab Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lab_Name</valueSetName>
    </valueSet>
</CustomField>