unpackaged/main/default/objects/Courier_Data2__c/fields/Name_of_Lab_staff__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Lab_staff__c</fullName>
    <label>Name of Lab staff</label>
    <length>255</length>
    <type>Text</type>
</CustomField>