unpackaged/main/default/objects/Courier_Data2__c/fields/Name_of_Next_Courier_2__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Next_Courier_2__c</fullName>
    <label>Name of Next Courier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Courier</valueSetName>
    </valueSet>
</CustomField>