unpackaged/main/default/objects/Courier_Data2__c/fields/Package_10__c.field-meta.xml
<CustomField>
    <fullName>Package_10__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Package :10</label>
    <referenceTo>Sample_Package__c</referenceTo>
    <relationshipLabel>Courier Data (Package :10)</relationshipLabel>
    <relationshipName>Courier_Data9</relationshipName>
    <type>Lookup</type>
</CustomField>