unpackaged/main/default/objects/Courier_Data2__c/fields/Package_1__c.field-meta.xml
<CustomField>
    <fullName>Package_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Package: 1</label>
    <referenceTo>Sample_Package__c</referenceTo>
    <relationshipLabel>Courier Data</relationshipLabel>
    <relationshipName>Courier_Data</relationshipName>
    <type>Lookup</type>
</CustomField>