unpackaged/main/default/objects/Courier_Data2__c/fields/Package_2__c.field-meta.xml
<CustomField>
    <fullName>Package_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Package: 2</label>
    <referenceTo>Sample_Package__c</referenceTo>
    <relationshipLabel>Courier Data (Package: 2)</relationshipLabel>
    <relationshipName>Courier_Data1</relationshipName>
    <type>Lookup</type>
</CustomField>