unpackaged/main/default/objects/Courier_Data2__c/fields/Pickup_Temperature_1__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Temperature_1__c</fullName>
    <label>Pickup Temperature: 1</label>
    <type>Phone</type>
</CustomField>