unpackaged/main/default/objects/Courier_Data2__c/fields/Pickup_Temperature_2__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Temperature_2__c</fullName>
    <label>Pickup Temperature: 2</label>
    <type>Phone</type>
</CustomField>