unpackaged/main/default/objects/Courier_Data2__c/fields/Pickup_Temperature_3__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Temperature_3__c</fullName>
    <label>Pickup Temperature: 3</label>
    <type>Phone</type>
</CustomField>