unpackaged/main/default/objects/Courier_Data2__c/fields/Pickup_Temperature__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Temperature__c</fullName>
    <label>Pickup Temperature</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>