unpackaged/main/default/objects/Courier_Data2__c/fields/Previous_Courier_3__c.field-meta.xml
<CustomField>
    <fullName>Previous_Courier_3__c</fullName>
    <label>Previous Courier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Courier</valueSetName>
    </valueSet>
</CustomField>