unpackaged/main/default/objects/Courier_Data2__c/fields/Purpose_of_Trip__c.field-meta.xml
<CustomField>
    <fullName>Purpose_of_Trip__c</fullName>
    <label>Purpose of Trip</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>