unpackaged/main/default/objects/Courier_Data2__c/fields/Refuel_Cost_US_Dollar__c.field-meta.xml
<CustomField>
    <fullName>Refuel_Cost_US_Dollar__c</fullName>
    <formula>Cost_pre_gallon_in_county_US_Dollar__c  *  Fuel_Gallon__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Refuel Cost (US Dollar)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>