unpackaged/main/default/objects/Courier_Data2__c/fields/Refuel_Date__c.field-meta.xml
<CustomField>
    <fullName>Refuel_Date__c</fullName>
    <label>Refuel Date</label>
    <type>Date</type>
</CustomField>