unpackaged/main/default/objects/Courier_Data2__c/fields/Relay_County__c.field-meta.xml
<CustomField>
    <fullName>Relay_County__c</fullName>
    <label>Relay County</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Liberia_County</valueSetName>
    </valueSet>
</CustomField>