unpackaged/main/default/objects/Courier_Data2__c/fields/Sample_Collection_Site_Location_2__c.field-meta.xml
<CustomField>
    <fullName>Sample_Collection_Site_Location_2__c</fullName>
    <label>Sample Collection Site Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Facilities</valueSetName>
    </valueSet>
</CustomField>