unpackaged/main/default/objects/Courier_Data2__c/fields/Sample_Drop_off_Location_3__c.field-meta.xml
<CustomField>
    <fullName>Sample_Drop_off_Location_3__c</fullName>
    <label>Sample Drop off Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Facilities</valueSetName>
    </valueSet>
</CustomField>