unpackaged/main/default/objects/Courier_Data2__c/fields/Sample_Drop_off_Temperature__c.field-meta.xml
<CustomField>
    <fullName>Sample_Drop_off_Temperature__c</fullName>
    <label>Sample Drop off Temperature</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>