unpackaged/main/default/objects/Courier_Data2__c/fields/Sample_Entry_Courier__c.field-meta.xml
<CustomField>
    <fullName>Sample_Entry_Courier__c</fullName>
    <label>Sample Data Entry Courier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Courier</valueSetName>
    </valueSet>
</CustomField>