unpackaged/main/default/objects/Courier_Data2__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Start_Kilometer__c</columns>
    <columns>End_Kilometer__c</columns>
    <columns>Purpose_of_Trip__c</columns>
    <columns>Courier_Pickup_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>